[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/terminal_scene.gd" id="1_h7q7u"]
[ext_resource type="CodeHighlighter" path="res://scenes/MiniscriptHighlighter.tres" id="2_q8j0n"]
[ext_resource type="Theme" path="res://scenes/terminal_theme.tres" id="3_m8x1a"]

[node name="TerminalScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_m8x1a")
script = ExtResource("1_h7q7u")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0.0588235, 0.0705882, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="OutputScroll" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="OutputContent" type="VBoxContainer" parent="VBox/OutputScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Output" type="RichTextLabel" parent="VBox/OutputScroll/OutputContent"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = false
fit_content = true
scroll_active = false
selection_enabled = true
autowrap_mode = 3
theme_override_colors/default_color = Color(0.682353, 0.952941, 0.713726, 1)

[node name="BottomSpacer" type="Control" parent="VBox/OutputScroll/OutputContent"]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="InputRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Prompt" type="Label" parent="VBox/InputRow"]
layout_mode = 2
text = "player@term:~/ $ "

[node name="Input" type="LineEdit" parent="VBox/InputRow"]
layout_mode = 2
size_flags_horizontal = 3
keep_editing_on_text_submit = true
caret_blink = true
placeholder_text = "Type a command and press Enter"

[node name="EditorOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="EditorLayout" type="VBoxContainer" parent="EditorOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Editor" type="CodeEdit" parent="EditorOverlay/EditorLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true
syntax_highlighter = ExtResource("2_q8j0n")
highlight_current_line = true
gutters_draw_line_numbers = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="EditorStatus" type="Label" parent="EditorOverlay/EditorLayout"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 0
clip_text = true
text = ""
